fixed saving, fixed the problem about textfield values not updating unless Enter is pressed